--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,26 @@
-.App {
-  text-align: center;
-}
 
+
+
+ h1{
+   display: flex;
+   justify-content: center;
+ }
+
+ .App {
+  margin:0 auto;
+  display:flex;
+  text-align: center;
+  align-content: center;
+  
+}
+img {
+  height: 300px;
+  width: 600px;
+}
+p{
+  margin-right : 200px;
+  margin-left: 200px;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -31,3 +50,4 @@
     transform: rotate(360deg);
   }
 }
+
