Made the button worked to change the date

--- a/src/App.css
+++ b/src/App.css
@@ -50,4 +50,11 @@ p{
     transform: rotate(360deg);
   }
 }
-
+button{
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: black;
+  color: white;
+}
