--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 
 
- h1{
+ h1  , img {
    display: flex;
    justify-content: center;
  }
@@ -12,15 +12,20 @@
   text-align: center;
   align-content: center;
   
+  
 }
 img {
   height: 300px;
-  width: 600px;
+  width: 400px;
+  margin-left: 500px;
+  border: 1px solid currentColor;
+  border-radius: 10%;
 }
-p{
+
+/* p{
   margin-right : 200px;
   margin-left: 200px;
-}
+} */
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -36,6 +41,7 @@ p{
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
@@ -50,11 +56,20 @@ p{
     transform: rotate(360deg);
   }
 }
-button{
-  width: 60px;
-  height: 60px;
+button {
+  display: flex;
+  justify-content: flex-start;
+  width: 95px;
+  height: 30px;
   text-align: center;
-  border-radius: 50%;
+  border-radius: 10%;
   background-color: black;
   color: white;
+  margin-left: 650px;
+  border: none;
+  outline:none;
+  cursor: pointer;
+  margin-top:10px;
+  text-align: center;
 }
+
